--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A simple static website for showcasing basic content.">
-    <title>Simple Static Website</title>
+    <title>Simple Static Website for all of us</title>
     <style>
         /* General Styles */
         * {
